tests/ui/parser/functions/returns_empty_parens.sol
function f() returns() {}
//~^ ERROR: expected one of `function`, `mapping`, elementary type name, or path, found `)`
